Capitalization and formatting

--- a/creating-campaign/membership/creatememtier.mdx
+++ b/creating-campaign/membership/creatememtier.mdx
@@ -3,7 +3,7 @@ title: 'Implementing Membership Tiers'
 ---
 <Steps>
     <Step title="Navigate to your event's overview page and open the '③ Tiers' tab">
-        <img src="/images/creating-campaign/membership/creating tier/Tier Button Location.png"/>
+        <img width="613" height="714" src="/images/creating-campaign/membership/creating tier/Tier Button Location.png"/>
     </Step>
     <Step title="Click 'Add Tier'">
         <img src="/images/creating-campaign/membership/creating tier/Add Tier Button Location.webp"/>
