--- a/distribution/discountpromocode.mdx
+++ b/distribution/discountpromocode.mdx
@@ -11,32 +11,32 @@ title: 'Discount and Promo Codes'
     <Step title="Sign into the Moongate Merchant Portal">
         [https://portal.moongate.id/](https://portal.moongate.id/)
     </Step>
-    <Step title="Navigate to the Target Event or Membership Page">
+    <Step title="Navigate to the target event or membership page">
     </Step>
-    <Step title="Navigate to the Discount & Codes Tab">
-        Go to the "③ Tickets" or "③ Tiers" page within the chosen event/membership page respectively, and then click on the "Discount & Codes" tab. From here you can add new time-based discounts and promo codes.
+    <Step title="Open the 'Discount & Codes' tab">
+        Go to the "③ Tickets" or "③ Tiers" page within the chosen event/membership page, and then click on the "Discount & Codes" tab. From here you can add new time-based discounts and promo codes.
         <img src="/images/distribution/discount-promo-codes/discount and codes tab.png"/>
     </Step>
-    <Step title="Add a Time-based Discount/Promo Code">
+    <Step title="Add a time-based discount or promo code">
         <AccordionGroup>
             <Accordion title="Time-based Discount">
                 <Steps>
                         <Step title="Click 'Add New'">                            
                             <img src="/images/distribution/discount-promo-codes/time based discount/add discount.png"/>
                         </Step>
-                        <Step title="Select a Ticket Type/Membership Tier to Discount">
+                        <Step title="Select a ticket type/membership tier to discount">
                             In the following window, select the ticket type/membership tier to apply a discount to.
                             <img src="/images/distribution/discount-promo-codes/time based discount/select tier.webp"/>
                         </Step>
-                        <Step title="Set the Discounted Price">
+                        <Step title="Set the discounted price">
                             <img src="/images/distribution/discount-promo-codes/time based discount/set price.webp"/>
                         </Step>
-                        <Step title="Set the Discount End Date">
+                        <Step title="Set the discount end date">
                             Click the calendar icon in the "End Date" field to open the date picker. Select a date for the discount period to end. The discount period will run from the current date to the selected date.
                             <img src="/images/distribution/discount-promo-codes/time based discount/set end date.png"/>
                             Click "Add" when complete. Your discount period is now in effect until the selected date.
                         </Step>
-                        <Step title="(Optional) Prematurely End Discount Period">
+                        <Step title="Prematurely end discount period (Optional)">
                             <img src="/images/distribution/discount-promo-codes/time based discount/delete time based discount.gif"/>
                             The promotional period can be cut short by deleting the discount from the ticket type/membership tier. From the Discount & Codes Tab, click the action button for the target time-based discount, "Edit", and then "Delete" on the following window.
                         </Step>
@@ -47,14 +47,14 @@ title: 'Discount and Promo Codes'
                     <Step title="Click 'Add New'">
                         <img src="/images/distribution/discount-promo-codes/promo code/add code.png"/>
                     </Step>
-                    <Step title="Select a Ticket Type/Membership Tier to Discount">
+                    <Step title="Select a ticket type/membership tier to discount">
                         In the following window, select the ticket type/membership tier to apply a discount to.
                         <img src="/images/distribution/discount-promo-codes/promo code/select tier.png"/>
                     </Step>
-                    <Step title="Enter a Discount Percentage">
+                    <Step title="Enter a discount percentage">
                         <img src="/images/distribution/discount-promo-codes/promo code/set discount.png"/>
                     </Step>
-                    <Step title="Manually Generate or Bulk Generate Promo Codes">
+                    <Step title="Manually generate or bulk generate promo codes">
                         If you are adding a small number of codes or your campaign requires a specific promotional code, select "Manual." Otherwise, select "Bulk Generate" to automatically generate codes.
                         <AccordionGroup>
                             <Accordion title="Manual">
@@ -67,11 +67,11 @@ title: 'Discount and Promo Codes'
                             </Accordion>
                         </AccordionGroup>
                     </Step>
-                    <Step title="Deleting Promo Codes">
+                    <Step title="Delete promo codes">
                         From the Discount & Codes Tab, click the action button for the target discount code, "Delete," and then "Confirm" on the following window.
                         <img src="/images/distribution/discount-promo-codes/promo code/delete promo code.gif"/>
                     </Step>
-                    <Step title="Create a Direct Discount Code Link (Optional)">
+                    <Step title="Create a direct discount code link (Optional)">
                         Customers can be sent directly to the checkout page with a discount code already applied to their cart. To do so, simply append `/checkout?code=(your-discount-code)` to the back of your event's URL, where `(your-discount-code)` is a valid and currently active discount code.
                         <img src="/images/distribution/discount-promo-codes/promo code/direct discount link.gif"/>
                         An example URL would be formatted as follows: https://app.moongate.id/events/moongatedemo/checkout?code=placeholder-code.
