--- a/distribution/airdropping.mdx
+++ b/distribution/airdropping.mdx
@@ -10,14 +10,14 @@ description: 'Airdropping refers to the distribution of a free NFT to a targeted
     <Step title="Sign into the Moongate Merchant Portal">
         [https://portal.moongate.id/](https://portal.moongate.id/)
     </Step>
-    <Step title="Navigate to the Target Event or Membership Page">
+    <Step title="Navigate to the target event or membership page">
     </Step>
-    <Step title="Choose the Ticket or Membership Tier to be Airdropped">
+    <Step title="Choose the ticket type or membership tier to be airdropped">
         Go to the "③ Tickets" or "③ Tiers" page within the chosen event/membership page respectively, and locate the ticket type or membership tier that you want to airdrop.
         
         Please note that airdropping a ticket/membership enables the recipient(s) to claim it for free, regardless of whether the ticket/membership is paid or not. If your application still requires recipients to pay, we recommend gating by NFT/Email/Wallet instead.
     </Step>
-    <Step title="Choose an Airdropping Method">
+    <Step title="Choose an email input method">
         Click the "Airdrop" button on the target ticket type/membership tier.
         
         Select "Upload .CSV" if there are a large number of people that you will be airdropping the ticket/membership to, and "Manual" for a smaller quantity.
@@ -28,21 +28,21 @@ description: 'Airdropping refers to the distribution of a free NFT to a targeted
                     <Step title="Download the CSV template">
                         <img src="/images/distribution/airdropping/download template.webp"/>
                     </Step>
-                    <Step title="Add Recipients">
-                        Open the template in a spreadsheet editor. Following the template format, input the email addresses of the recipients.
+                    <Step title="Add recipients">
+                        Open the template in a spreadsheet editor. Input the email addresses of the recipients according to the template format.
                         <Info>
-                            Please note that the maximum number of recipients per airdrop is 100.
+                            The maximum number of recipients per airdrop is 100.
                         </Info>
                     </Step>
-                    <Step title="Upload the CSV">
+                    <Step title="Upload the CSV file">
                         Upload the edited CSV file and click "Next" to complete the upload.
                         <img src="/images/distribution/airdropping/upload csv.webp"/>
                     </Step>
-                    <Step title="Confirm Recipient Addresses">
+                    <Step title="Confirm recipient addresses">
                         A message will appear asking you to validate the recipients' email addresses. When you have verified that the listed addresses are correct, click "Confirm" to send an invitation to the target recipients.
                         <img src="/images/distribution/airdropping/confirm addresses.webp"/>
                     </Step>
-                    <Step title="Confirm Successful Import">
+                    <Step title="Confirm successful import">
                         <img src="/images/distribution/airdropping/confirm import.webp"/>
                         Click "Check Airdrop" on the subsequent message to view the list of airdrop recipients. This information can also be accessed from the target event/membership's dashboard at any time.
                         <img src="/images/distribution/airdropping/view recipients.webp"/>
@@ -52,15 +52,15 @@ description: 'Airdropping refers to the distribution of a free NFT to a targeted
             </Accordion>
             <Accordion title="Manual">
                 <Steps>
-                    <Step title="Add Recipients">
+                    <Step title="Add recipients">
                         Click "Add Recipient" and enter a target recipient's email address. Repeat as appropriate for additional recipients and save when complete.
                         <img src="/images/distribution/airdropping/manual add recipients.gif"/>
                     </Step>
-                    <Step title="Confirm Recipient Addresses">
+                    <Step title="Confirm recipient addresses">
                         A message will appear asking you to validate the recipients' email addresses. When you have verified that the listed addresses are correct, click "Confirm" to send an invitation to the target recipients.
                         <img src="/images/distribution/airdropping/confirm addresses.webp"/>
                     </Step>
-                    <Step title="Confirm Successful Import">
+                    <Step title="Confirm successful import">
                         <img src="/images/distribution/airdropping/confirm import.webp"/>
                         Click "Check Airdrop" on the subsequent message to view the list of airdrop recipients. This information can also be accessed from the target event/membership's dashboard at any time.
                         <img src="/images/distribution/airdropping/view recipients.webp"/>
