--- a/check-in/check-in-guide.mdx
+++ b/check-in/check-in-guide.mdx
@@ -4,30 +4,30 @@ title: 'Check-in Guide'
 
 ### Before the Event
 
-Download the Moongate Verify App – you will use this app to check your guests in.
+Download the Moongate Verify app – you will use this app to check your guests in.
 - [Apple iOS](https://apps.apple.com/app/moongate-verify/id6444063664) app
 - [Google Play Store](https://play.google.com/store/apps/details?id=com.moongate.verify) app
 
 ### During the Event: Check-in Guide
 <Steps>
-    <Step title="Log into the Moongate Verify App">
+    <Step title="Log into the Moongate Verify app">
         You'll need your event's access code, which is located in the corresponding event's dashboard page in the portal.
         <img src="/images/check-in-guide/code location.png"/>
     </Step>
-    <Step title="Choose the Target Event">
+    <Step title="Choose the target event">
     </Step>
-    <Step title="Scan the Attendee's QR Code(s).">
+    <Step title="Scan the attendee's QR code(s).">
         Attendees’ QR codes can be located from:
         - Confirmation email (search for an email from “contact@moongate.id” with subject line of “Your Ticket for [Event]”)
         - Moongate user portal after login - https://app.moongate.id/
     </Step>
-    <Step title="Check the Attendee's Eligibility">
+    <Step title="Check the attendee's eligibility">
         Verification results:
         <img src="/images/check-in-guide/verification msgs.png"/>
     </Step>
 </Steps>
 
-### For Attendees Yet to Claim Their Ticket
+### For attendees yet to claim their ticket:
 For customers who have not yet claimed their ticket (for instance, if their tickets were purchased on their behalf by a friend), they must redeem their ticket using the redemption email that was sent to them by Moongate (noreply@moongate.id).
 
 The email contains a ticket redemption button, and by clicking on this link, they can redeem their ticket. Please allow approximately 10 seconds for the blockchain to update the data before scanning the QR code in the user portal and checking in the guest.
