--- a/benefits/gating.mdx
+++ b/benefits/gating.mdx
@@ -8,9 +8,8 @@ Unlike tickets or membership passes, eligibility to claim a benefit **must** be 
 
 <AccordionGroup>
   <Accordion title="Gating by NFT">
-    **Select NFT Collection to Gate By**
-    
-    In the target benefit campaign page, navigate to the benefit's edit panel and locate the 'Gated by NFT' settings.
+    **Select NFT Collection to gate by**
+    Locate the 'Gated by NFT' settings within the target benefit's edit panel.
 
     If you have hosted an event that was ticketed/created a membership program administered by Moongate, simply select "Your Collection" from the "Type" field.
     <img src="/images/benefits/gating/your collection toggle.png"/>
@@ -45,11 +44,11 @@ Unlike tickets or membership passes, eligibility to claim a benefit **must** be 
   </Accordion>
   <Accordion title="Gating by Email/Wallet (Whitelisting)">
     <Steps>
-        <Step title="Enable Email/Wallet-gating">
+        <Step title="Enable email/wallet-gating">
             Navigate to the "Advance" section for the ticket type to be gated and enable "Gated by Email/Wallet."
             <img src="/images/benefits/gating/Email or Wallet Toggle.png"/>
         </Step>
-        <Step title="Choose a Whitelisting Method">
+        <Step title="Choose a whitelisting method">
             Select CSV if there are a large number of people that you will be gating this ticket type to, and manual for a smaller quantity.
             <Tip>
                 You can always add additional addresses for gating later using either method.
@@ -60,14 +59,14 @@ Unlike tickets or membership passes, eligibility to claim a benefit **must** be 
                     <Step title="Download the CSV template">
                         <img src="/images/benefits/gating/Download CSV Template.png"/>
                     </Step>
-                    <Step title="Add Addresses to the CSV Template">
+                    <Step title="Add addresses to the CSV template">
                         Open the template in a spreadsheet editor. Following the template format, input the target email and wallet addresses. You can mix email and wallet addresses concurrently.
                     </Step>
-                    <Step title="Upload the CSV">
+                    <Step title="Upload the CSV file">
                         Upload the edited CSV file and save.
                         <img src="/images/benefits/gating/Whitelist Upload.png"/>
                     </Step>
-                    <Step title="Confirm Successful Import">
+                    <Step title="Confirm successful import">
                         Return to the Tickets page, locate the gated ticket type, and click the number in the "Gated by" column to confirm the addresses.
                         <img src="/images/benefits/gating/Whitelist Confirmation 1.png"/>
                         <img src="/images/benefits/gating/Whitelist Confirmation 2.png"/>
@@ -81,7 +80,7 @@ Unlike tickets or membership passes, eligibility to claim a benefit **must** be 
                         Repeat as appropriate for additional addresses and save when complete.
                         <img src="/images/benefits/gating/Manual Flow.gif"/>
                     </Step>
-                    <Step title="Confirm Successful Import">
+                    <Step title="Confirm successful import">
                         Return to the Tickets page, locate the gated ticket type, and click the number in the "Gated by" column to confirm the addresses.
                         <img src="/images/benefits/gating/Whitelist Confirmation 1.png"/>
                         <img src="/images/benefits/gating/Whitelist Confirmation 2.png"/>
