--- a/creating-campaign/ticketing/gating.mdx
+++ b/creating-campaign/ticketing/gating.mdx
@@ -17,7 +17,7 @@ Ticket purchase eligibility can be allocated by ownership of certain NFT collect
             In the target ticket type’s edit panel, enable 'Gated by NFT' under 'Advanced Options'.
             <img src="/images/creating-campaign/ticketing/gating/NFT Gate Toggle.png"/>
         </Step>
-        <Step title="Select NFT Collection to gate by">
+        <Step title="Select NFT collection to gate by">
             If you have hosted an event that was ticketed by or created a membership program on Moongate, we have made it easy for you to NFT-gate by your events and membership tiers. Simply select "Your Collection" from the "Type" field.
             <img src="/images/creating-campaign/ticketing/gating/Your Collection Toggle.png"/>
             <Accordion title="Your Collection">
