--- a/admin-settings/collecting-payment.mdx
+++ b/admin-settings/collecting-payment.mdx
@@ -8,7 +8,7 @@ title: 'Collecting User Payments'
 </Warning>
 
 <Steps>
-    <Step title="Navigate to the Payment settings panel">
+    <Step title="Navigate to the 'Payment' panel">
         Click 'Setting' on the sidebar, and then 'Payment.'
         <img src="/images/admin-settings/collecting-payment/payment panel.gif"/>
     </Step>
