--- a/admin-settings/team-management.mdx
+++ b/admin-settings/team-management.mdx
@@ -4,7 +4,7 @@ description: 'Grant team members access to your event/membership program/benefit
 ---
 
 <Steps>
-    <Step title="Navigate to the Team Management panel">
+    <Step title="Navigate to the 'Team Management' panel">
         Click 'Setting' on the sidebar, and then 'Team Management.'
         <img src="/images/admin-settings/team-management/team management panel.gif"/>
     </Step>
