--- a/benefits/gating.mdx
+++ b/benefits/gating.mdx
@@ -3,12 +3,16 @@ title: 'Gating by NFT + Email/Wallet'
 description: 'Limit benefits to a group of specified users'
 ---
 
-Merchants can restrict the ability to claim a benefit to specified people only, allowing vendors to offer exclusive value to customers. 
-Unlike tickets or membership passes, eligibility to claim a benefit **must** be determined by ownership of an NFT within specified collections (i.e gating is mandatory.) Benefits can additionally be gated via email and wallet.
+Merchants can restrict the ability to claim a benefit to specified people only, allowing vendors to offer exclusive value to customers.
+
+<Warning>
+    Unlike tickets or membership passes, eligibility to claim a benefit **must** be determined by ownership of an NFT within specified collections (i.e gating is mandatory.) Benefits can additionally be gated via email and wallet.
+</Warning>
 
 <AccordionGroup>
   <Accordion title="Gating by NFT">
-    **Select NFT Collection to gate by**
+    **Select NFT collection to gate by**
+    
     Locate the 'Gated by NFT' settings within the target benefit's edit panel.
 
     If you have hosted an event that was ticketed/created a membership program administered by Moongate, simply select "Your Collection" from the "Type" field.
