--- a/customer-insights/sales-attendance-data.mdx
+++ b/customer-insights/sales-attendance-data.mdx
@@ -7,7 +7,7 @@ title: 'View Sales & Attendance Data'
 </Tip>
 
 <Steps>
-    <Step title="Sign into the Moongate Merchant Portal">
+    <Step title="Sign into the Moongate Merchant portal">
         [https://portal.moongate.id/](https://portal.moongate.id/)
     </Step>
     <Step title="Navigate to the target event, membership program, or benefit page">
