--- a/customer-insights/view-customer-info.mdx
+++ b/customer-insights/view-customer-info.mdx
@@ -5,7 +5,7 @@ description: 'View detailed information about event attendees/membership program
 
 ## Viewing Detailed Customer Information
 <Steps>
-    <Step title="Open the 'Contact' tab on the Moongate Merchant Portal.">
+    <Step title="Open the 'Contact' tab on the Moongate Merchant portal.">
         [https://portal.moongate.id/contacts](https://portal.moongate.id/contacts)            
     </Step>
     <Step title="View target customer information">
