--- a/user-guide/the-basics/benefits.mdx
+++ b/user-guide/the-basics/benefits.mdx
@@ -5,7 +5,7 @@ NFT tickets and membership passes may unlock associated benefits, such as discou
 
 <Steps>
     <Step title="Navigate to the 'Benefit' tab">
-        <img src="/user-guide/images/the-basics/benefits/benefit tab.avif"/>
+        <img height="558" width="420" src="/user-guide/images/the-basics/benefits/benefit tab.avif"/>
         https://app.moongate.id/benefits
     </Step>
     <Step title="Select benefit to be claimed">
