--- a/benefits/createbenefit.mdx
+++ b/benefits/createbenefit.mdx
@@ -50,13 +50,13 @@ title: 'Creating a Benefit'
         administered by Moongate). Please refer to [this guide](/benefits/gating) for instructions on gating by NFT.
     </Info>
   </Step>
-  <Step title="Specify advanced options (Optional)">
+  <Step title="Specify advanced options (optional)">
     If applicable, specify advanced options such as limited quantity, whether users can redeem the benefit multiple times, whether users must
     hold a promo code to unlock this benefit, etc.
     <img src= "/images/benefits/create-benefit/advance toggle.png"/>
     When you are ready, click "Save" to close the Benefit Option window, then click "Next."
   </Step>
-  <Step title="Add questions (Optional)">
+  <Step title="Add questions (optional)">
     <img src= "/images/benefits/create-benefit/add Qs.gif"/>
     If desired, add questions to collect information from users who are joining your benefit campaign. These questions 
     will be shown to users during checkout.
