--- a/creating-campaign/membership/creatememtier.mdx
+++ b/creating-campaign/membership/creatememtier.mdx
@@ -47,7 +47,7 @@ title: 'Implementing Membership Tiers'
             To change the currency type, return to "① Info" in the sidebar and change the value in the "Currency" field.
         </Tip>
     </Step>
-    <Step title="Specify advanced options (Optional)">
+    <Step title="Specify advanced options (optional)">
         If applicable, specify the maximum number of available memberships within this tier, as well as whether this tier should be invisible to users on the membership information page.
         <img src="/images/creating-campaign/membership/creating tier/Advance Toggle.png"/>
         <Info>
@@ -55,7 +55,7 @@ title: 'Implementing Membership Tiers'
         </Info>
         When you are ready, click "Save" to close the "Membership Tier" window, then click "Next."
     </Step>
-    <Step title="Add questions (Optional)">
+    <Step title="Add questions (optional)">
         <img src="/images/creating-campaign/membership/creating tier/Add Qs.gif"/>
         If desired, add questions to collect information from users who are joining the membership program. These questions will be shown to users during checkout.
         <img src="/images/creating-campaign/membership/creating tier/Qs.png"/>
