--- a/creating-campaign/ticketing/createtickets.mdx
+++ b/creating-campaign/ticketing/createtickets.mdx
@@ -55,7 +55,7 @@ title: 'Creating Tickets'
         To change the currency type, return to "① Info" in the sidebar and change the value in the "Currency" field.
     </Tip>
   </Step>
-  <Step title="Hidden tickets, gated tickets, limited quantities, invite only tickets, etc (Optional)">
+  <Step title="Hidden tickets, gated tickets, limited quantities, invite only tickets, etc (optional)">
     <Accordion title="Advanced Options">
       The advanced options menu allows you to specify the number of available tickets of this type, the maximum number of tickets
       of this type purchasable in a transaction, gating settings via NFT/email/wallet, whether this ticket type should be hidden
@@ -94,7 +94,7 @@ title: 'Creating Tickets'
       When you are ready, click "Save" to close the ticket details window, then click "Next."
     </Accordion>
   </Step>
-  <Step title="Add questions (Optional)">
+  <Step title="Add questions (optional)">
     <Accordion title="Adding Questions">
       <img src="/images/creating-campaign/ticketing/creating tickets/Add Qs.gif"/>
       If applicable, add questions to collect information from users who are purchasing tickets. These questions 
