--- a/user-guide/the-basics/purchasing-redeeming-tix-mems.mdx
+++ b/user-guide/the-basics/purchasing-redeeming-tix-mems.mdx
@@ -7,7 +7,7 @@ title: 'Purchasing and Redeeming Tickets/Memberships'
         where you can select the tickets/membership passes you'll be purchasing.
         <img src="/user-guide/images/the-basics/purchasing-redeeming-tix-mems/landing page.avif"/>
     </Step>
-    <Step title="Enter discount/redemption/referral code (Optional)">
+    <Step title="Enter discount/redemption/referral code (optional)">
         Enter a discount/redemption/referral code, if any, and click "Apply." Any applicable discounts or restricted ticket/membership 
         types will then be unlocked.
         <img src="/user-guide/images/the-basics/purchasing-redeeming-tix-mems/discount code.avif"/>
@@ -23,10 +23,12 @@ title: 'Purchasing and Redeeming Tickets/Memberships'
     </Step>
     <Step title="Fill out required information">
         Fill out the required information for each ticket on the checkout page.
-        <img src="/user-guide/images/the-basics/purchasing-redeeming-tix-mems/full info.avif"/>
+        <img src="/user-guide/images/the-basics/purchasing-redeeming-tix-mems/fill info.avif"/>
         <Warning>
             **If you are purchasing ticket(s) on behalf of someone else, please enable the "Buy for others" toggle and provide their email 
-            address.** Due to the nature of NFTs and the blockchain, transferring a ticket(s) from your account to theirs at a later time 
+            address.**
+            
+            Due to the nature of NFTs and the blockchain, transferring a ticket(s) from your account to theirs at a later time 
             will incur a transfer fee. Providing their email address during this step will bypass this fee.
         </Warning>
     </Step>
