--- a/distribution/discountpromocode.mdx
+++ b/distribution/discountpromocode.mdx
@@ -36,7 +36,7 @@ title: 'Discount and Promo Codes'
                             <img src="/images/distribution/discount-promo-codes/time based discount/set end date.png"/>
                             Click "Add" when complete. Your discount period is now in effect until the selected date.
                         </Step>
-                        <Step title="Prematurely end discount period (Optional)">
+                        <Step title="Prematurely end discount period (optional)">
                             <img src="/images/distribution/discount-promo-codes/time based discount/delete time based discount.gif"/>
                             The promotional period can be cut short by deleting the discount from the ticket type/membership tier. From the Discount & Codes Tab, click the action button for the target time-based discount, "Edit", and then "Delete" on the following window.
                         </Step>
@@ -71,7 +71,7 @@ title: 'Discount and Promo Codes'
                         From the Discount & Codes Tab, click the action button for the target discount code, "Delete," and then "Confirm" on the following window.
                         <img src="/images/distribution/discount-promo-codes/promo code/delete promo code.gif"/>
                     </Step>
-                    <Step title="Create a direct discount code link (Optional)">
+                    <Step title="Create a direct discount code link (optional)">
                         Customers can be sent directly to the checkout page with a discount code already applied to their cart. To do so, simply append `/checkout?code=(your-discount-code)` to the back of your event's URL, where `(your-discount-code)` is a valid and currently active discount code.
                         <img src="/images/distribution/discount-promo-codes/promo code/direct discount link.gif"/>
                         An example URL would be formatted as follows: https://app.moongate.id/events/moongatedemo/checkout?code=placeholder-code.
