--- a/user-guide/managing-wallet/transferring-nft.mdx
+++ b/user-guide/managing-wallet/transferring-nft.mdx
@@ -27,7 +27,9 @@ title: 'Transferring a Ticket/Membership'
         <img src="/user-guide/images/managing-wallet/transferring-nft/send button.avif"/>
         <Info>
             If your asset value = $0, you'll need to top it up with credits to cover the transfer fee. You can do this by clicking "Buy" 
-            and purchasing credits using a credit/debit card, or transferring funds from another wallet. **NOTE:** the minimum credit 
+            and purchasing credits using a credit/debit card, or transferring funds from another wallet.
+            
+            **NOTE:** the minimum credit 
             purchase amount will likely be higher than the transfer fee.
             <img src="/user-guide/images/managing-wallet/transferring-nft/view gas credits.avif"/>
         </Info>
