--- a/user-guide/the-basics/purchasing-redeeming-tix-mems.mdx
+++ b/user-guide/the-basics/purchasing-redeeming-tix-mems.mdx
@@ -37,7 +37,7 @@ title: 'Purchasing and Redeeming Tickets/Memberships'
         Select your payment method and accept the Moongate Terms of Sale and Privacy Policy.
     </Step>
     <Step title="Complete checkout">
-        Click "Checkout" when ready, and follow the instructions from your payment processor to complete your purchase. Please allow a 
+        Click 'Checkout' when ready, and follow the instructions from your payment processor to complete your purchase. Please allow a 
         few minutes for your NFT ticket/membership pass to appear in your portal and wallet.
     </Step>
 </Steps>
