--- a/user-guide/the-basics/user-check-in-guide.mdx
+++ b/user-guide/the-basics/user-check-in-guide.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Checking Into Events'
+title: 'Checking Into Events/Proving Membership'
 ---
 <Steps>
     <Step title="Click 'Check in'">
