Formatting and wording

--- a/admin-settings/collecting-payment.mdx
+++ b/admin-settings/collecting-payment.mdx
@@ -4,7 +4,8 @@ title: 'Collecting User Payments'
 
 <Warning>
     If you are collecting payment for tickets or memberships, you must connect a bank account or crypto wallet to receive your payout. 
-    Additionally, please contact [Moongate support](mailto:support@moongate.id) if you will be collecting payment for your event or membership program.
+    
+    Additionally, you will not automatically receive payouts. Please contact [Moongate support](mailto:support@moongate.id) if you will be collecting payment for your event or membership program.
 </Warning>
 
 <Steps>
@@ -15,6 +16,6 @@ title: 'Collecting User Payments'
     <Step title="Add a bank account/crypto wallet">
         Click 'Add Bank Account' or 'Add Crypto Wallet' according to your preference and fill out the requested information in the 
         subsequent pop-up window.
-        <img src="/images/admin-settings/collecting-payment/add wallet button.png"/>
+        <img width="520" height="94" src="/images/admin-settings/collecting-payment/add wallet button.png"/>
     </Step>
 </Steps>
