--- a/benefits/createbenefit.mdx
+++ b/benefits/createbenefit.mdx
@@ -7,7 +7,7 @@ title: 'Creating a Benefit'
     Within the target benefit campaign's page, click '② Benefits' and then 'Add Benefit' to create a new benefit.    
     <img src="/images/benefits/create-benefit/add button location.png"/>
     <Info>
-        Moongate automatically generates a placeholder benefit titled "Reward 1" upon the creation of a campaign. A benefit campaign must have at least one benefit associated with it, so feel free to delete this placeholder benefit after creating a benefit of your own.
+        Moongate automatically generates a placeholder benefit titled "Reward 1". A benefit campaign must have at least one benefit associated with it, so feel free to delete this placeholder benefit after creating a benefit of your own.
     </Info>
   </Step>
   <Step title="Add benefit name">
@@ -65,7 +65,7 @@ title: 'Creating a Benefit'
     <img src= "/images/benefits/create-benefit/responses.gif"/>
   </Step>
   <Step title="Specify payment options">
-    Select a payment option if applicable. Moongate supports both credit cards and crypto options. **Please contact us if you will be collecting payment for your benefit campaign.**
+    Select a payment option if applicable. Moongate supports both credit cards and crypto options. **You will not automatically receive payouts, so please contact us if you will be collecting payment for your benefit campaign.**
     <img src= "/images/benefits/create-benefit/payment.png"/>
   </Step>
   <Step title="Launch your benefit campaign and benefit(s)">
