--- a/creating-campaign/membership/creatememtier.mdx
+++ b/creating-campaign/membership/creatememtier.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Implementing Membership Tiers'
+title: 'Creating Membership Tiers'
 ---
 <Steps>
     <Step title="Navigate to your event's overview page and open the '③ Tiers' tab">
