--- a/creating-campaign/membership/gating.mdx
+++ b/creating-campaign/membership/gating.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'Gating by NFT/Email/Wallet'
-description: 'Limit membership tier purchases to a group of specified users'
+description: 'Limit membership tier purchases to a group of specified users.'
 ---
 
 By gating a membership tier type, vendors can restrict the ability to attain membership to specified people only, allowing vendors to offer exclusive value to users. 
