--- a/creating-campaign/ticketing/gating.mdx
+++ b/creating-campaign/ticketing/gating.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'Gating by NFT/Email/Wallet'
-description: 'Limit ticket access to a group of specified users'
+description: 'Limit ticket access to a group of specified users.'
 ---
 
 By gating a ticket type, vendors can restrict the ability to purchase it to specified people only, allowing vendors to offer exclusive value to users. 
