--- a/distribution/airdropping.mdx
+++ b/distribution/airdropping.mdx
@@ -1,9 +1,9 @@
 ---
 title: 'Airdropping'
-description: 'Airdropping refers to the distribution of a free NFT to a targeted audience. Moongate supports airdropping via email addresses.'
+description: 'Distribute free NFTs to a targeted audience.'
 ---
 <Tip>
-    The airdropping process is identical for both tickets and memberships.
+    The airdropping process is identical for both tickets and memberships. Moongate supports airdropping via email addresses.
 </Tip>
 
 <Steps>
