--- a/creating-campaign/ticketing/createevent.mdx
+++ b/creating-campaign/ticketing/createevent.mdx
@@ -4,13 +4,10 @@ title: 'Creating an Event'
 
 Before you can create and issue tickets, you must first create a corresponding event. 
 
-<Steps>
-  <Step title="Sign into the Moongate Merchant Portal">
-    [https://portal.moongate.id/](https://portal.moongate.id/)
-  </Step>
+<Steps>  
   <Step title="Navigate to the 'Event' tab and click 'Create'">
-    [https://portal.moongate.id/events](https://portal.moongate.id/events)
-    <img src="/images/creating-campaign/ticketing/creating an event/Create Event Button Location.png"/>
+    Sign into the [Moongate Merchant Portal](https://portal.moongate.id/), open the ['Event' tab](https://portal.moongate.id/events), and click 'Create'.
+    <img src="/images/creating-campaign/ticketing/creating an event/create event flow.gif"/>
   </Step>
   <Step title="Add basic information for your event">
     Enter the name of your event, starting & ending dates/times, address, etc.
