--- a/creating-campaign/ticketing/createtickets.mdx
+++ b/creating-campaign/ticketing/createtickets.mdx
@@ -2,12 +2,10 @@
 title: 'Creating Tickets'
 ---
 <Steps>
-  <Step title="Navigate to your event's overview page and open the '③ Tickets' tab">
-    <img width="541" height="700" src="/images/creating-campaign/ticketing/creating tickets/3 Tix Location.png"/>
-  </Step>
-  <Step title="Click 'Add Ticket'">
-    <img src="/images/creating-campaign/ticketing/creating tickets/Add Tix Button Location.png"/>
-  </Step>
+  <Step title="Add a new ticket type">
+    Within the target event's overview page, open the ‘③ Tickets’ tab and then click ‘Add Ticket’ to create a new ticket type.
+    <img src="/images/creating-campaign/ticketing/creating tickets/create tix flow.gif"/>
+  </Step>  
   <Step title="Add ticket name/tier">
     Enter the name or category (GA, VIP, Concession, etc) for this ticket type. Additional ticket types can always be added later.
     <img src="/images/creating-campaign/ticketing/creating tickets/Tix Name Field.png"/>
