--- a/creating-campaign/membership/creatememprogram.mdx
+++ b/creating-campaign/membership/creatememprogram.mdx
@@ -2,13 +2,10 @@
 title: 'Creating a Membership Program'
 ---
 <Steps>
-    <Step title="Sign into the Moongate Merchant Portal.">
-        [https://portal.moongate.id/](https://portal.moongate.id/)
+    <Step title="Register your membership program">
+        Sign into the [Moongate Merchant Portal](https://portal.moongate.id/), open the ['Membership' tab](https://portal.moongate.id/memberships), and click 'Create'.
+        <img src="/images/creating-campaign/membership/creating program/create campaign flow.gif"/>
     </Step>
-    <Step title="Navigate to the 'Memberships' tab and click 'Create'">
-        [https://portal.moongate.id/memberships](https://portal.moongate.id/memberships)
-        <img src="/images/creating-campaign/membership/creating program/Create Button Location.png"/>
-    </Step>    
     <Step title="Add basic membership program information">
         Enter the title of the membership program, the URL, currency used to purchase membership, and information about your brand.
         <img src="/images/creating-campaign/membership/creating program/Basic Membership Info.webp"/>
