--- a/creating-campaign/membership/creatememtier.mdx
+++ b/creating-campaign/membership/creatememtier.mdx
@@ -2,11 +2,9 @@
 title: 'Creating Membership Tiers'
 ---
 <Steps>
-    <Step title="Navigate to your event's overview page and open the '③ Tiers' tab">
-        <img width="613" height="714" src="/images/creating-campaign/membership/creating tier/Tier Button Location.png"/>
-    </Step>
-    <Step title="Click 'Add Tier'">
-        <img src="/images/creating-campaign/membership/creating tier/Add Tier Button Location.webp"/>
+    <Step title="Add a new membership tier">
+        Within the target membership program's overview page, open the ‘③ Tiers tab and then click ‘Add Tier’ to create a new membership tier. A pop-up will appear.
+        <img src="/images/creating-campaign/ticketing/creating tickets/create tix flow.gif"/>
     </Step>
     <Step title="Add membership tier name/type">
         Enter the name or tier (superfan, VIP, etc) for this membership type. Additional tiers can always be added to your membership program later.
