--- a/creating-campaign/ticketing/createevent.mdx
+++ b/creating-campaign/ticketing/createevent.mdx
@@ -5,7 +5,7 @@ title: 'Creating an Event'
 Before you can create and issue tickets, you must first create a corresponding event. 
 
 <Steps>  
-  <Step title="Navigate to the 'Event' tab and click 'Create'">
+  <Step title="Register your event">
     Sign into the [Moongate Merchant Portal](https://portal.moongate.id/), open the ['Event' tab](https://portal.moongate.id/events), and click 'Create'.
     <img src="/images/creating-campaign/ticketing/creating an event/create event flow.gif"/>
   </Step>
