--- a/creating-campaign/ticketing/createtickets.mdx
+++ b/creating-campaign/ticketing/createtickets.mdx
@@ -3,9 +3,9 @@ title: 'Creating Tickets'
 ---
 <Steps>
   <Step title="Add a new ticket type">
-    Within the target event's overview page, open the ‘③ Tickets’ tab and then click ‘Add Ticket’ to create a new ticket type.
+    Within the target event's overview page, open the ‘③ Tickets’ tab and then click ‘Add Ticket’ to create a new ticket type. A pop-up will appear.
     <img src="/images/creating-campaign/ticketing/creating tickets/create tix flow.gif"/>
-  </Step>  
+  </Step>
   <Step title="Add ticket name/tier">
     Enter the name or category (GA, VIP, Concession, etc) for this ticket type. Additional ticket types can always be added later.
     <img src="/images/creating-campaign/ticketing/creating tickets/Tix Name Field.png"/>
