--- a/benefits/createbenefitprgrm.mdx
+++ b/benefits/createbenefitprgrm.mdx
@@ -5,12 +5,9 @@ title: 'Creating a Benefit Campaign'
 In order to create and distribute a benefit, you must first create an associated benefit campaign.
 
 <Steps>
-  <Step title="Sign into the Moongate Merchant Portal">
-    [https://portal.moongate.id/](https://portal.moongate.id/)
-  </Step>
-  <Step title="Navigate to the 'Benefit' tab and click 'Create'">
-    [https://portal.moongate.id/benefits](https://portal.moongate.id/benefits)
-    <img src="/images/benefits/create-benefit-prgrm/create button location.png"/>
+  <Step title="Register your benefit campaign">
+      Sign into the [Moongate Merchant Portal](https://portal.moongate.id/), open the ['Benefit' tab](https://portal.moongate.id/benefits), and click 'Create'.
+      <img src="/images/benefits/create-benefit-prgrm/create benefit prgrm flow.gif"/>
   </Step>
   <Step title="Add basic benefit campaign information">
     Enter the title of the benefit campaign, the URL, your description and featured image for the campaign, claiming period, currency used to purchase premium benefits (if any), and information about your brand.
