--- a/creating-campaign/membership/creatememtier.mdx
+++ b/creating-campaign/membership/creatememtier.mdx
@@ -4,7 +4,7 @@ title: 'Creating Membership Tiers'
 <Steps>
     <Step title="Add a new membership tier">
         Within the target membership program's overview page, open the ‘③ Tiers tab and then click ‘Add Tier’ to create a new membership tier. A pop-up will appear.
-        <img src="/images/creating-campaign/ticketing/creating tickets/create tix flow.gif"/>
+        <img src="/images/creating-campaign/membership/creating tier/create tier flow.gif"/>
     </Step>
     <Step title="Add membership tier name/type">
         Enter the name or tier (superfan, VIP, etc) for this membership type. Additional tiers can always be added to your membership program later.
