--- a/user-guide/support/user-faq.mdx
+++ b/user-guide/support/user-faq.mdx
@@ -16,6 +16,11 @@ title: 'User FAQs'
         1. Create a new account using your own wallet – more information on that under the 'Existing Wallet' tab [here](/user-guide/the-basics/signup-login).
         2. [Connect your wallet to your existing Moongate account](/user-guide/managing-wallet/connecting-wallet). After connecting your wallet you'll be able to choose your own wallet during check out.
     </Accordion>
+    <Accordion title="I purchased a ticket administered by Moongate on the secondary market. How will my ticket be authenticated?">
+        Assuming the wallet containing your newly purchased ticket is connected to your Moongate account, you can follow our [check-in guide](/user-guide/the-basics/user-check-in-guide) as usual to successfully check into the event.
+
+        The QR code sent to the original purchaser's email will be automatically invalidated upon transfer, meaning that you don't have to worry about potential duplicate tickets.
+    </Accordion>
     <Accordion title="I'm having issues signing in.">
         Please ensure that:
         1. You are using Chrome or Safari. We do not support in-app browsers, Brave, or Incognito mode.
