claim non-custodial wallet

--- a/user-guide/support/user-faq.mdx
+++ b/user-guide/support/user-faq.mdx
@@ -2,12 +2,11 @@
 title: 'User FAQs'
 ---
 <AccordionGroup>
-    <Accordion title="Do I need a blockchain wallet to make a purchase on Moongate?">
-        No, you don't!
-
-        When you create a Moongate account via Google or email, Moongate automatically creates a non-custodial wallet for you. You can 
-        manage this wallet under the "[Profile](https://app.moongate.id/profile)" page on our user web portal. Web3 users creating their Moongate 
-        account for the first time can link to their existing wallet both during and after the account creation process.
+    <Accordion title="Do I need an existing blockchain wallet to make a purchase on Moongate?">
+        No, you don't! When you create a Moongate account via Google or email, Moongate automatically creates a non-custodial wallet for you. You can 
+        manage this wallet under the "[Profile](https://app.moongate.id/profile)" page on our user web portal.
+        
+        Web3 users with existing wallets creating their Moongate account for the first time can link their wallet both during and after the account creation process. Refer to [our guide](/user-guide/managing-wallet/connecting-wallet) for more information on how to do so.
     </Accordion>
     <Accordion title="I don't recognise the wallet address at the checkout page.">
         When you log in using Google or email, we automatically create a non-custodial wallet for you. The wallet address that you do not recognize is likely the address of this non-custodial wallet.
@@ -15,12 +14,7 @@ title: 'User FAQs'
         If you would prefer to receive the NFT in your own external wallet, you have two options:
         1. Create a new account using your own wallet – more information on that under the 'Existing Wallet' tab [here](/user-guide/the-basics/signup-login).
         2. [Connect your wallet to your existing Moongate account](/user-guide/managing-wallet/connecting-wallet). After connecting your wallet you'll be able to choose your own wallet during check out.
-    </Accordion>
-    <Accordion title="I purchased a ticket administered by Moongate on the secondary market. How will my ticket be authenticated?">
-        Assuming the wallet containing your newly purchased ticket is connected to your Moongate account, you can follow our [check-in guide](/user-guide/the-basics/user-check-in-guide) as usual to successfully check into the event.
-
-        The QR code sent to the original purchaser's email will be automatically invalidated upon transfer, meaning that you don't have to worry about potential duplicate tickets.
-    </Accordion>
+    </Accordion>    
     <Accordion title="I'm having issues signing in.">
         Please ensure that:
         1. You are using Chrome or Safari. We do not support in-app browsers, Brave, or Incognito mode.
@@ -32,10 +26,15 @@ title: 'User FAQs'
 
         Additionally, make sure that you are not browsing in Incognito mode.
     </Accordion>
-    <Accordion title="I bought a ticket/membership via moongate. Where is my ticket/membership?">
+    <Accordion title="I bought a ticket/membership via Moongate. Where is my ticket/membership?">
         Your ticket or membership is stored as an NFT in your blockchain wallet. You can check your NFT at our [user web portal](https://app.moongate.id).
 
         The “Pass” section shows all the tickets/memberships you have acquired using the Moongate platform.        
+    </Accordion>
+    <Accordion title="I purchased a ticket administered by Moongate on the secondary market. How will my ticket be authenticated?">
+        Assuming the wallet containing your newly purchased ticket is connected to your Moongate account, you can follow our [check-in guide](/user-guide/the-basics/user-check-in-guide) as usual to successfully check into the event.
+
+        The QR code sent to the original purchaser's email will be automatically invalidated upon transfer, meaning that you don't have to worry about potential duplicate tickets.
     </Accordion>
     <Accordion title="I can't see my NFT ticket/membership at the user portal.">
         Please ensure that you are logged in with the same account that you used to purchase the NFT tickets. If you continue to experience issues, please 
