--- a/user-guide/managing-wallet/transferring-nft.mdx
+++ b/user-guide/managing-wallet/transferring-nft.mdx
@@ -10,13 +10,10 @@ title: 'Transferring a Ticket/Membership'
     **Please note:** Moongate has no administrative control over your wallet and its contents, and as such is unable to facilitate any 
     transfers on your behalf.
 </Warning>
-<Steps>
-    <Step title="Navigate to the 'Profile' tab">
-        <img src="/user-guide/images/managing-wallet/transferring-nft/profile button.png"/>
-        https://app.moongate.id/profile
-    </Step>
+<Steps>    
     <Step title="Access your non-custodial wallet">
-        Click "Manage Assets" to be taken to your non-custodial wallet.
+        Sign into the Moongate Portal and navigate to the ['Profile' tab](https://app.moongate.id/profile). 
+        Click the arrow under 'Wallet' and then 'Manage Assets' to be taken to your non-custodial wallet.
         <img src="/user-guide/images/managing-wallet/transferring-nft/manage assets button.gif"/>
     </Step>
     <Step title="Select the NFT you wish to transfer">
