--- a/user-guide/managing-wallet/manage-non-custodial-wallet.mdx
+++ b/user-guide/managing-wallet/manage-non-custodial-wallet.mdx
@@ -4,7 +4,7 @@ description: 'Gain custody of and manage Moongate's automatically generated wall
 ---
 <Warning>
     Moongate has no administrative control over your wallet and its contents, and as such is unable to manage your wallet on your behalf. 
-    We recommend that you contact [Particle Wallet support](https://discord.com/invite/FB44yXKnRK) if you require additional support.
+    We recommend contacting [Particle Wallet support](https://discord.com/invite/FB44yXKnRK) if you require additional support.
 </Warning>
 
 **Claiming Your Non-Custodial Wallet**
@@ -14,7 +14,7 @@ description: 'Gain custody of and manage Moongate's automatically generated wall
         Click the arrow under 'Wallet' and then 'Manage Assets' to be taken to your non-custodial wallet.
         <img src="/user-guide/images/managing-wallet/manage-non-custodial-wallet/manage assets button.gif"/>
     </Step>
-    <Step title="Verify your wallet via email/phone number">
+    <Step title="Verify your wallet via email or phone number">
         Click the settings gear, enter the 'Account and Security' page, and then add an email/phone number.
         <img src="/user-guide/images/managing-wallet/manage-non-custodial-wallet/pw setting.png"/>
         <img src="/user-guide/images/managing-wallet/manage-non-custodial-wallet/pw acct security.png"/>
